styling fixes backrow from going out of screen

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -8,6 +8,7 @@ body {
 .back-row {
     margin-left: 25px !important;
     margin-top: 10px !important;
+    max-width: 700px;
 }
 
 #back-to-cart {
